project-1-packages/CommunitySite/main/default/objects/Product2/fields/Menu_Type__c.field-meta.xml
<CustomField>
    <fullName>Menu_Type__c</fullName>
    <label>Menu Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>coffee</fullName>
            </value>
            <value>
                <fullName>sandwich</fullName>
            </value>
            <value>
                <fullName>snacks</fullName>
            </value>
            <value>
                <fullName>sweets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>