project-1-packages/CommunitySite/main/default/objects/Product2/fields/Seasonal__c.field-meta.xml
<CustomField>
    <fullName>Seasonal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seasonal</label>
    <type>Checkbox</type>
</CustomField>